fix(responsive): align hero and navbar padding with other sections
- Match hero content padding to section breakpoints (40px at 740px, 24px at 560px, 16px at 400px)
- Match navbar padding to same breakpoints for consistent alignment
- Remove old hero breakpoints at 520px and 420px
- Remove old navbar breakpoints at 520px and 420px

--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -405,8 +405,8 @@
         height: auto;
         padding-top: 120px;
         padding-bottom: 90px;
-        padding-left: 72px;
-        padding-right: 72px;
+        padding-left: 40px;
+        padding-right: 40px;
         margin-left: 0px;
         margin-right: 0px;
     }
@@ -438,17 +438,17 @@
     }
 }
 
-@media (max-width: 520px) {
-    .hero__content {
-        padding-left: 48px;
-        padding-right: 48px;
-    }
-}
-
-@media (max-width: 420px) {
+@media (max-width: 560px) {
     .hero__content {
         padding-left: 24px;
         padding-right: 24px;
+    }
+}
+
+@media (max-width: 400px) {
+    .hero__content {
+        padding-left: 16px;
+        padding-right: 16px;
     }
 }
 
